# SnapCompanion

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
.github/workflows/: ci.yml  release.yml  release_sign.yml
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
